comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Paragrafo artigo 001</p>
+            <h2>Curos de HTML5 com CSS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid incidunt veritatis facilis quibusdam praesentium recusandae deleniti, beatae error pariatur, nostrum soluta atque. Non ipsa nobis, reprehenderit suscipit inventore accusamus incidunt.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Paragrafo artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias dolorum corrupti voluptatum odio velit aliquid, sint animi voluptates nulla quaerat provident corporis doloribus non magnam perferendis laudantium cupiditate culpa quis?</p>
         </article>
     </main>
 </body>
